// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render additional categories component correctly 1`] = `
<withRouter(Languages)
  categories={Array []}
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  definitions={Array []}
  selectedCategory="TEST"
/>
`;

exports[`should render additional categories component correctly 2`] = `<NewCodePeriod />`;

exports[`should render additional categories component correctly 3`] = `
<AnalysisScope
  categories={Array []}
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  definitions={Array []}
  selectedCategory="TEST"
/>
`;

exports[`should render additional categories component correctly 4`] = `
<withRouter(withAppStateContext(AlmIntegration))
  categories={Array []}
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  definitions={Array []}
  selectedCategory="TEST"
/>
`;

exports[`should render additional categories component correctly 5`] = `
<Connect(withCurrentUser(PRDecorationBinding))
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
/>
`;
